--- a/Experimental.ipynb
+++ b/Experimental.ipynb
@@ -216,6 +216,104 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ImageId</th>\n",
+       "      <th>ClassId</th>\n",
+       "      <th>EncodedPixels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>7090</td>\n",
+       "      <td>ffcf72ecf.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>121911 34 122167 101 122422 169 122678 203 122...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7091</td>\n",
+       "      <td>fff02e9c5.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>207523 3 207777 9 208030 15 208283 22 208537 2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7092</td>\n",
+       "      <td>fffe98443.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>105929 5 106177 14 106424 24 106672 33 106923 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7093</td>\n",
+       "      <td>ffff4eaa8.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16899 7 17155 20 17411 34 17667 47 17923 60 18...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7094</td>\n",
+       "      <td>ffffd67df.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30931 43 31103 127 31275 211 31489 253 31745 2...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ImageId  ClassId  \\\n",
+       "7090  ffcf72ecf.jpg        3   \n",
+       "7091  fff02e9c5.jpg        3   \n",
+       "7092  fffe98443.jpg        3   \n",
+       "7093  ffff4eaa8.jpg        3   \n",
+       "7094  ffffd67df.jpg        3   \n",
+       "\n",
+       "                                          EncodedPixels  \n",
+       "7090  121911 34 122167 101 122422 169 122678 203 122...  \n",
+       "7091  207523 3 207777 9 208030 15 208283 22 208537 2...  \n",
+       "7092  105929 5 106177 14 106424 24 106672 33 106923 ...  \n",
+       "7093  16899 7 17155 20 17411 34 17667 47 17923 60 18...  \n",
+       "7094  30931 43 31103 127 31275 211 31489 253 31745 2...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/plain": [
        "array(['0002cc93b.jpg', '0007a71bf.jpg', '000a4bcdd.jpg', ...,\n",
        "       'fffe98443.jpg', 'ffff4eaa8.jpg', 'ffffd67df.jpg'], dtype=object)"
