--- a/Experimental.ipynb
+++ b/Experimental.ipynb
@@ -1503,7 +1503,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      " 79/100 [======================>.......] - ETA: 2:01 - loss: 0.5778 - acc: 0.7480"
+      "100/100 [==============================] - 589s 6s/step - loss: 0.5469 - acc: 0.7600 - val_loss: 0.7287 - val_acc: 0.4781\n",
+      "Epoch 2/10\n",
+      "100/100 [==============================] - 594s 6s/step - loss: 0.3567 - acc: 0.8372 - val_loss: 0.6857 - val_acc: 0.4219\n",
+      "Epoch 3/10\n",
+      " 83/100 [=======================>......] - ETA: 1:39 - loss: 0.3243 - acc: 0.8576"
      ]
     }
    ],
