--- a/Experimental.ipynb
+++ b/Experimental.ipynb
@@ -1507,7 +1507,9 @@
       "Epoch 2/10\n",
       "100/100 [==============================] - 594s 6s/step - loss: 0.3567 - acc: 0.8372 - val_loss: 0.6857 - val_acc: 0.4219\n",
       "Epoch 3/10\n",
-      " 83/100 [=======================>......] - ETA: 1:39 - loss: 0.3243 - acc: 0.8576"
+      "100/100 [==============================] - 602s 6s/step - loss: 0.3184 - acc: 0.8587 - val_loss: 0.7092 - val_acc: 0.5063\n",
+      "Epoch 4/10\n",
+      "  1/100 [..............................] - ETA: 9:55 - loss: 0.3133 - acc: 0.8125"
      ]
     }
    ],
