--- a/Binary.ipynb
+++ b/Binary.ipynb
@@ -145,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x22cd4758808>"
+       "<matplotlib.image.AxesImage at 0x242d44e5548>"
       ]
      },
      "execution_count": 5,
@@ -203,7 +203,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x22d68e299c8>"
+       "<matplotlib.image.AxesImage at 0x24368ba9988>"
       ]
      },
      "execution_count": 7,
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "(2514, 2)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "(2514, 256, 256, 3)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,13 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Using TensorFlow backend.\n",
       "C:\\Users\\DEEPAK\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:19: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(32, kernel_size=(3, 3), input_shape=(256, 256,..., activation=\"relu\", padding=\"same\")`\n",
       "C:\\Users\\DEEPAK\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:21: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), activation=\"relu\", padding=\"same\")`\n",
       "C:\\Users\\DEEPAK\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:23: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(128, (3, 3), activation=\"relu\", padding=\"same\")`\n",
@@ -382,29 +383,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_5 (Conv2D)            (None, 256, 256, 32)      896       \n",
+      "conv2d_1 (Conv2D)            (None, 256, 256, 32)      896       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_5 (MaxPooling2 (None, 128, 128, 32)      0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 128, 128, 32)      0         \n",
       "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 128, 128, 64)      18496     \n",
+      "conv2d_2 (Conv2D)            (None, 128, 128, 64)      18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_6 (MaxPooling2 (None, 64, 64, 64)        0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 64, 64, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_7 (Conv2D)            (None, 64, 64, 128)       73856     \n",
+      "conv2d_3 (Conv2D)            (None, 64, 64, 128)       73856     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_7 (MaxPooling2 (None, 32, 32, 128)       0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 32, 32, 128)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_8 (Conv2D)            (None, 32, 32, 256)       295168    \n",
+      "conv2d_4 (Conv2D)            (None, 32, 32, 256)       295168    \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_8 (MaxPooling2 (None, 16, 16, 256)       0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 16, 16, 256)       0         \n",
       "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 65536)             0         \n",
+      "flatten_1 (Flatten)          (None, 65536)             0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 2)                 131074    \n",
+      "dense_1 (Dense)              (None, 2)                 131074    \n",
       "=================================================================\n",
       "Total params: 519,490\n",
       "Trainable params: 519,490\n",
@@ -448,6 +449,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "10054/10054 [==============================] - 1945s 193ms/step - loss: 4.0791 - accuracy: 0.6651\n",
+      "Epoch 2/10\n",
+      "10054/10054 [==============================] - 1512s 150ms/step - loss: 0.4358 - accuracy: 0.7890:30 - loss\n",
+      "Epoch 3/10\n",
+      "10054/10054 [==============================] - 1645s 164ms/step - loss: 0.4003 - accuracy: 0.8082 13:55 - loss: 0.4043 - a - ETA: 1:54 - loss: 0.4045 - accurac\n",
+      "Epoch 4/10\n",
+      "10054/10054 [==============================] - 1572s 156ms/step - loss: 0.3442 - accuracy: 0.8391\n",
+      "Epoch 5/10\n",
+      "10054/10054 [==============================] - 1599s 159ms/step - loss: 0.3250 - accuracy: 0.8488:06 - loss: 0.3235 - accuracy: 0.84 - ETA: 4:49 - loss\n",
+      "Epoch 6/10\n",
+      "10054/10054 [==============================] - 1600s 159ms/step - loss: 0.3147 - accuracy: 0.8588:32 - loss: 0.3176 - accuracy:\n",
+      "Epoch 7/10\n",
+      "10054/10054 [==============================] - 1631s 162ms/step - loss: 0.2797 - accuracy: 0.8783:40 - loss: \n",
+      "Epoch 8/10\n",
+      "10054/10054 [==============================] - 1577s 157ms/step - loss: 0.2724 - accuracy: 0.8748:49 - loss: 0.2 - ETA: 2:11 - loss: 0.2735 - accur\n",
+      "Epoch 9/10\n",
+      "10054/10054 [==============================] - 1614s 161ms/step - loss: 0.2569 - accuracy: 0.8836\n",
+      "Epoch 10/10\n",
+      "10054/10054 [==============================] - 1767s 176ms/step - loss: 0.2251 - accuracy: 0.9022 34:26 - loss: 0.2198 - accuracy:  - ETA:  - ETA: 11:29 - loss: 0.2214 - accuracy: 0.901 - ETA: 11:12 - loss: 0.2212 - accuracy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x23f470c4b48>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train_r,y_train,epochs=10,batch_size=128)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -455,60 +502,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/2\n",
-      "10054/10054 [==============================] - 3998s 398ms/step - loss: 4.0791 - accuracy: 0.6651\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\DEEPAK\\Anaconda3\\lib\\site-packages\\keras\\callbacks\\callbacks.py:95: RuntimeWarning: Method (on_train_batch_end) is slow compared to the batch update (17.943060). Check your callbacks.\n",
-      "  % (hook_name, delta_t_median), RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/2\n",
-      "10054/10054 [==============================] - 4479s 446ms/step - loss: 0.4358 - accuracy: 0.7890\n"
+      "2514/2514 [==============================] - 86s 34ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x22938830fc8>"
+       "[0.3582603376160184, 0.8579952120780945]"
       ]
      },
      "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(X_train_r,y_train,epochs=2,batch_size=128)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2514/2514 [==============================] - 124s 49ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.43408627510544984, 0.7893794775009155]"
-      ]
-     },
-     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
