--- a/Experimental_Carlos.ipynb
+++ b/Experimental_Carlos.ipynb
@@ -3531,7 +3531,7 @@
       "Epoch 6/11\n",
       "481/481 [==============================] - 845s 2s/step - loss: 0.6766 - accuracy: 0.7300 - val_loss: 1.3052 - val_accuracy: 0.4600\n",
       "Epoch 7/11\n",
-      " 14/481 [..............................] - ETA: 13:46 - loss: 0.5977 - accuracy: 0.7679"
+      "416/481 [========================>.....] - ETA: 1:57 - loss: 0.6444 - accuracy: 0.7407"
      ]
     }
    ],
