--- a/MultiClass_Classification_Report.ipynb
+++ b/MultiClass_Classification_Report.ipynb
@@ -696,8 +696,15 @@
    "source": [
     "## Discussion\n",
     "\n",
-    "Training convolutional neural networks with a small unbalanced dataset is not an easy task. After implementing several strategies to produce a model, due to the given dataset, the model overfits. Ideally, a larger dataset with more class representation would do the work. "
+    "Training convolutional neural networks with a small unbalanced dataset is not an easy task. After implementing several strategies to produce a model, due to the given dataset, the model overfits. Ideally, a larger dataset with more class representation would do the work. Another option would be to try and drop class 4. this might decrease the overfit and improve the validation scores."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
