--- a/MultiClass_Classification_Report.ipynb
+++ b/MultiClass_Classification_Report.ipynb
@@ -62,9 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trn_dir = '/Users/carlostavarez/Desktop/imgs_multiClass/train'\n",
-    "tst_dir = '/Users/carlostavarez/Desktop/imgs_multiClass/test'\n",
-    "val_dir = '/Users/carlostavarez/Desktop/imgs_multiClass/valid'"
+    "trn_dir = '~./imgs_multiClass/train'\n",
+    "tst_dir = '~./imgs_multiClass/test'\n",
+    "val_dir = '~/imgs_multiClass/valid'"
    ]
   },
   {
