--- a/MultiClass_Classification_Report.ipynb
+++ b/MultiClass_Classification_Report.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "trn_dir = '~./imgs_multiClass/train'\n",
     "tst_dir = '~./imgs_multiClass/test'\n",
-    "val_dir = '~/imgs_multiClass/valid'"
+    "val_dir = '~./imgs_multiClass/valid'"
    ]
   },
   {
