--- a/MultiClass_Classification_Report.ipynb
+++ b/MultiClass_Classification_Report.ipynb
@@ -487,6 +487,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing\n",
+      "\n",
+      "Confusion Matrix\n",
+      "\n",
+      "[[ 38   4  33   2]\n",
+      " [  0  12   4   3]\n",
+      " [ 31   9 418  18]\n",
+      " [  2   0  43   7]]\n",
+      "\n",
+      "Classification Report\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.54      0.49      0.51        77\n",
+      "           1       0.48      0.63      0.55        19\n",
+      "           2       0.84      0.88      0.86       476\n",
+      "           3       0.23      0.13      0.17        52\n",
+      "\n",
+      "    accuracy                           0.76       624\n",
+      "   macro avg       0.52      0.53      0.52       624\n",
+      "weighted avg       0.74      0.76      0.75       624\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "defects.cl_report(model_classifier, ts_imgs, ts_lbls, 'Testing')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -590,6 +628,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing\n",
+      "\n",
+      "Confusion Matrix\n",
+      "\n",
+      "[[ 20   5  52   0]\n",
+      " [  4  11   4   0]\n",
+      " [ 30   4 435   7]\n",
+      " [  0   0  49   3]]\n",
+      "\n",
+      "Classification Report\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.37      0.26      0.31        77\n",
+      "           1       0.55      0.58      0.56        19\n",
+      "           2       0.81      0.91      0.86       476\n",
+      "           3       0.30      0.06      0.10        52\n",
+      "\n",
+      "    accuracy                           0.75       624\n",
+      "   macro avg       0.51      0.45      0.46       624\n",
+      "weighted avg       0.70      0.75      0.72       624\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "defects.cl_report(model_7, ts_imgs, ts_lbls, 'Testing')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -688,6 +764,44 @@
    ],
    "source": [
     "defects.cl_report(model_18, vl_imgs, vl_lbls, 'Validation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing\n",
+      "\n",
+      "Confusion Matrix\n",
+      "\n",
+      "[[ 36   4  35   2]\n",
+      " [  0  12   5   2]\n",
+      " [ 22   6 436  12]\n",
+      " [  2   0  47   3]]\n",
+      "\n",
+      "Classification Report\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.60      0.47      0.53        77\n",
+      "           1       0.55      0.63      0.59        19\n",
+      "           2       0.83      0.92      0.87       476\n",
+      "           3       0.16      0.06      0.08        52\n",
+      "\n",
+      "    accuracy                           0.78       624\n",
+      "   macro avg       0.53      0.52      0.52       624\n",
+      "weighted avg       0.74      0.78      0.76       624\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "defects.cl_report(model_18, ts_imgs, ts_lbls, 'Testing')"
    ]
   },
   {
